updated converter test cases with getter and setters instead of argument constructor